# audio-search

./: .gitignore  CLAUDE.md  README.md  audio_mcp_server.py  main.py  pyproject.toml  transcript.json
docs/: classifier_explorer_guide.md  classify_segments_guide.md
notebooks/: audio_search.py  audio_segment_classifier.py  classifier_explorer.py  test_dataset.py
src/: classify_segments.py  label_audio.py
