[project]
name = "audio-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.23.9",
    "mcp[cli]>=1.27.2",
    "ollama>=0.6.2",
    "openai-whisper>=20250625",
    "soundfile>=0.14.0",
    "surveillance-datasets[hf,torch,yolo]",
    "torchcodec>=0.14.0",
    "transformers>=5.12.0",
]

[tool.uv.sources]
surveillance-datasets = { git = "ssh://git@github.com/eiffeltower-bo/surveillance_datasets.git" }
